log_output/manifests/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercise-namespace
