log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-reader
  namespace: exercise-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-reader
  template:
    metadata:
      labels:
        app: logoutput-reader
    spec:
      containers:
        - name: logoutput-reader
          image: arskale/log-reader:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: logs-vol
              mountPath: /app/logs
            - name: config-vol
              mountPath: /app/config
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

        - name: logoutput-writer
          image: arskale/log-writer:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "100m"
          volumeMounts:
            - name: logs-vol
              mountPath: /app/logs
              subPath: logs
      volumes:
        - name: logs-vol
          persistentVolumeClaim:
            claimName: logoutput-pv-claim
        - name: config-vol
          configMap:
            name: logoutput-reader-config
