log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-reader-svc
  namespace: exercise-namespace
spec:
  type: NodePort
  selector:
    app: logoutput-reader
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
